--- a/src/Gemfile
+++ b/src/Gemfile
@@ -68,3 +68,7 @@ gem "rolify", "~> 5.2"
 gem "rspec-rails", "~> 3.9", :groups => [:development, :test]
 
 gem "rails-controller-testing", "~> 1.0"
+
+gem "cloudinary", "~> 1.12"
+
+gem "activestorage-cloudinary-service", "~> 0.2.3"
