--- a/src/Gemfile
+++ b/src/Gemfile
@@ -72,3 +72,5 @@ gem "rails-controller-testing", "~> 1.0"
 gem "cloudinary", "~> 1.12"
 
 gem "activestorage-cloudinary-service", "~> 0.2.3"
+
+gem "stripe", "~> 5.10"
